<resources>
    <string name="app_name">High and Low</string>
    <string name="hit_text">あたり</string>
    <string name="lose_text">はずれ</string>
    <string name="high_text">High</string>
    <string name="next_text">次へ</string>
    <string name="low_text">Low</string>
    <string name="mycard_description">mycard description</string>
    <string name="droid_description">droid description</string>
</resources>
